--- a/style.css
+++ b/style.css
@@ -1,14 +1,4 @@
 
-*{
-    margin: 0;
-    padding: 0;
-}
-
-html{
-    position: relative;
-    min-height: 100vh;
-}
-
 body {
     background-color: #ffffff;
     font-family: 'Inter', sans-serif;
@@ -18,100 +8,6 @@ body {
 
 }
 
-main{
-    margin-bottom: 15vh;
-}
-
-footer{
-    position: absolute;
-    bottom: 0;
-    width:97%;
-    height:15vh;
-    text-align:center;
-    background-color: #D9D9D9;
-    padding:1%;
-}
-
-.loginForm{
-    width: 100%;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
-}
-
-.title{
-    font-size: 3rem;
-    display: flex;
-    justify-content: center;
-    font-family: 'Michroma', sans-serif;
-    margin: 4rem 0;
-}
-
-.borderTitle{
-    border-bottom-color: #c7c7c7;
-    border-bottom-style: solid;
-    border-width:2rem;
-    padding: 0 5rem;
-    line-height:3rem;
-}
-
-.item{
-    margin: 2vh 0;
-    font-size: 3rem;
-}
-
-.loginInput{
-    border-radius: 0.4rem;
-    border: none;
-    background-color: #c7c7c7;
-    text-align: center;
-    font-size: 2rem;
-    padding: 1vh 0;
-}
-
-.loginInput:focus{
-    outline: none;
-}
-
-.footerFlex{
-    /*margin-top: 5rem;*/
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center;
-}
-
-.logo{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.logoImg{
-    width:30%;
-}
-
-
-
-
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
-
-
-  section {
-    background-color: #fff;
-    padding: 20px;
-    margin: 10px 0;
-  }
-
-
 .search {
   display: block;
   margin: 10px 0;
@@ -119,12 +15,14 @@ footer{
   border: 10px solid #ccc;
   width: 70%;
   box-sizing: border-box;
+  float:center;
 }
 
-.center{
-  float: center;
+.result
+{
+  position: relative;
+  color: #001100;
+  background-color: #A8A8A8;
   width: 100%;
-  height: 100vh;
-  background-color: #D9D9D9;
   text-align: center;
 }
