--- a/style.css
+++ b/style.css
@@ -18,20 +18,17 @@ body
 .search 
 {
   display: block;
-  margin: 10px 0;
-  padding: 6px;
+  padding: 0;
+  margin:0;
   border: 10px solid #ccc;
   width: 100%;
   height: 10%;
   box-sizing: border-box;
-  float:center;
 }
 
 .Rechercher
 {
   display: block;
-  border: 1% solid #ccc;
-  float: center;
 }
 
 .form
@@ -50,5 +47,18 @@ body
   color: #001100;
   background-color: #A8A8A8;
   width: 30%;
+  margin:0;
+  padding:0 0 0 0;
   text-align: center;
+}
+
+.Dest
+{
+  display: block;
+  background-color: rgb(60, 167, 167);
+  height: 100%;
+  width: 100%;
+  margin-bottom: 2%;
+  align-items: center;
+  justify-content: center;
 }
